[package]
name = "rsky"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.1.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"

[dev-dependencies]
assert_fs = "1.1.2"
predicates = "3.1.2"
tempfile = "3.14.0"
test-case = "3.3.1"
