[package]
name = "atc"
version = "0.1.0"
edition = "2021"
authors = ["@mekaem"]
description = "A CLI tool for managing self-hosted Bluesky infrastructure"
license = "MPL-2.0"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.1.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json", "native-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.41.1", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_fs = "1.1.2"
predicates = "3.1.2"
tempfile = "3.14.0"
test-case = "3.3.1"
wiremock = "0.6.2"
